
[package]
name = "startin"
version = "0.4.9"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2018"
license = "MIT"
description = "A Delaunay triangulator for terrains."
repository = "https://github.com/hugoledoux/startin"
keywords = ["delaunay", "triangulation", "terrain", "gis"]
readme = "README.md"

[dependencies]
hashbrown = "0.6.1"
rand = "0.7.2"
log = "0.4.8"
env_logger = "0.7.1"
geojson= "*"
serde_json= "*"
las = { version = "0.7", features = ["laz"] }
num-format = "0.4.0"
clap = "3.0.0-beta.1"

[dev-dependencies]
csv = "1"
serde = "1.0"
serde_derive = "1.0"
las = { version = "0.7", features = ["laz"] }

[[example]]
name = "example1"

